# Parser-for-job-sites

./: DBManager.py  README.md  pyproject.toml
data/: vacancies.csv  vacancies.json  vacancies.xls
src/: UserInterface.py  VacancyStorage.py  main.py  utils.py
