[tool.poetry]
name = "parser-for-job-sites"
version = "0.1.0"
description = ""
authors = ["Artem Dedov <artem-dedov2012@yandex.ru>"]
readme = "README.md"
packages = [{include = "parser_for_job_sites"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
openpyxl = "^3.1.2"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
